--- a/todo.org
+++ b/todo.org
@@ -17,6 +17,8 @@
 ** optional arg for target
 *** update cx.call.beg_pc if specified
 * --
+* add time Int constructors
+** 42 msecs
 * add next-method
 ** search call chain for method call
 *** return next from method.set
