--- a/todo.org
+++ b/todo.org
@@ -1,3 +1,17 @@
+* add enum
+** add UserType
+*** override Val methods to dispatch if != set.root.next
+** add EnumType < UserType
+** enum Month (JAN ... DEC)
+** bind members in scope
+** provide conversion to-from int
+* --
+* add Date type
+** 1977 JUL 5 date.+{23 59 59 time}
+** add date/time constructors
+** add Timestamp +/- Time
+** add today/now
+* --
 * add quote
 ** 'foo '(1 2 3)
 ** add Val &Form.quote()
@@ -9,12 +23,6 @@
 **** call Form.ref().mark(cx)
 ***** deref on sweep
 * --
-* add Date type
-** 1977 JULY 5 date.+{23 59 59 time}
-** add date/time constructors
-** add Timestamp +/- Time
-** add today/now
-* --
 * add fix bench
 * add fib_iter
 * add fib_tail
@@ -23,6 +31,8 @@
 ** optional arg for target
 *** update cx.call.beg_pc if specified
 * --
+* replace USE_POOL with cx.debug
+** convert if statements
 * add next-method
 ** search call chain for method call
 *** return next from method.set
