--- a/todo.org
+++ b/todo.org
@@ -1,3 +1,18 @@
+* add %/splice support in reader
+** wrap next in SpliceForm
+** compile form as usual in SpliceForm.compile
+* add compile(form) fn
+** compile to lambda
+* add quote/if/else/while to readme
+* --
+* add fix bench
+* add fib_iter
+* add fib_tail
+* add recall method
+** goto beg_pc
+** optional arg for target
+*** update cx.call.beg_pc if specified
+* --
 * add enum
 ** add UserType
 *** override Val methods to dispatch if != set.root.next
@@ -11,25 +26,6 @@
 ** add date/time constructors
 ** add Timestamp +/- Time
 ** add today/now
-* --
-* add quote
-** 'foo '(1 2 3)
-** add Val &Form.quote()
-*** id -> sym
-*** lit -> val
-*** default push Form
-**** add FormType < ValType
-***** dump as Form@...
-**** call Form.ref().mark(cx)
-***** deref on sweep
-* --
-* add fix bench
-* add fib_iter
-* add fib_tail
-* add recall method
-** goto beg_pc
-** optional arg for target
-*** update cx.call.beg_pc if specified
 * --
 * replace USE_POOL with cx.debug
 ** convert if statements
