--- a/todo.org
+++ b/todo.org
@@ -1,27 +1,11 @@
-* add macro macro
-** quote macro args before calling
-** compile result
 * add Form.eq
 ** forward from Val
-* derive macro from method
-** add separate imp
-** use dispatch for expand
-* add let-sym bound-id prefix?
-** generate unique symbol with optional prefix at compile time
-* convert while to client macro
-** extract to LoopOp
-** loop until break
-** add break macro
-*** add LoopOp *cx.loop
-* add SplatForm
-** add support for .. suffix in reader
-** add '%(1 2 3).. test
+* add times loop
 *  update readme
 ** quoting
-** macros
 ** conditions
 *** if/else
-** loops
+** while
 * --
 * add fix bench
 * add fib_iter
