--- a/todo.org
+++ b/todo.org
@@ -1,5 +1,3 @@
-* update method arg list
-** add pos arg and switch pc to Node<Op>
 * update readme
 ** quoting/splicing
 ** branching
@@ -27,6 +25,7 @@
 ** add Timestamp +/- Time
 ** add today/now
 * --
+* plug valgrind quote memory leak
 * add Form.eq overrides
 * add macro arg typecheck
 ** fix types in abc/math
